# hitsz_network_2022

./: README.md
Lab1/: lab1_net.pkt
Lab4/: lab4_net.pkt
Lab8/: lab8_net.pkt
maillab/: Makefile  base64_utils.c  base64_utils.h  message.txt  recv.c  send.c
net-lab-2022-master/: CMakeLists.txt  udp_test.pcap  udp_test.pcapng
net-lab-2022-master/Npcap/Include/: Packet32.h
net-lab-2022-master/Npcap/Lib/: Packet.lib  wpcap.lib
net-lab-2022-master/Npcap/Lib/ARM64/: Packet.lib
net-lab-2022-master/Npcap/Lib/x64/: Packet.lib  wpcap.lib
net-lab-2022-master/include/: arp.h  buf.h  config.h  driver.h  ethernet.h  icmp.h  ip.h  map.h  net.h  udp.h  utils.h
net-lab-2022-master/src/: arp.c  buf.c  driver.c  ethernet.c  icmp.c  ip.c  main.c  map.c  net.c  udp.c  utils.c
net-lab-2022-master/testing/: arp_test.c  eth_in.c  eth_out.c  global.c  icmp_test.c  ip_frag_test.c  ip_test.c
net-lab-2022-master/testing/data/arp_test/: log  out.pcap
net-lab-2022-master/testing/data/eth_in/: demo_log  in.pcap
net-lab-2022-master/testing/data/eth_out/: in.pcap  log  out.pcap
net-lab-2022-master/testing/data/icmp_test/: demo_log  demo_out.pcap  log
net-lab-2022-master/testing/data/ip_frag_test/: demo_log  in.txt
net-lab-2022-master/testing/data/ip_test/: demo_out.pcap  in.pcap  log
net-lab-2022-master/testing/faker/: arp.c  driver.c  icmp.c  ip.c  udp.c
